fix responsive layout issues and match figma design

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -39,12 +39,12 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    opacity: 100%;
+    opacity: 0.4;
     cursor: pointer;
 }
 
 .card__like-btn:hover {
-    opacity: 100%;
+    opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
